JPackage working. Needs some bugfixes.